# django_boilerplate

./: .gitignore  pyproject.toml  readme.md
home/: admin.py  forms.py  models.py  views.py
home/migrations/: 0001_initial.py
home/templates/: index.html
myapp/: settings.py  settings_local.py.sample  urls.py
templates/: base.html
