[tool.poetry]
name = "dj_bootstrap5"
version = "0.1.0"
description = ""
authors = ["mkamruzzaman <mkamruzzaman@mangovoice.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.4"
django-crispy-forms = "^1.14.0"
crispy-bootstrap5 = "^0.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
